--- a/index.html
+++ b/index.html
@@ -1,129 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-	</head>
-	<body>
-		<!-- Header -->
-		<header>
-			<div>
-				<a href=""><span>WEB</span><span>STUDIO</span></a>
-			</div>
-			<ul>
-				<li>
-					<a href="">Studio</a>
-				</li>
-				<li>
-					<a href="">Portfolio</a>
-				</li>
-				<li>
-					<a href="">Contacts</a>
-				</li>
-			</ul>
-			<ul>
-				<li>
-					<a href="">info@devstudio.com</a>
-				</li>
-				<li>
-					<a href="">+11 (000) 111-11-11</a>
-				</li>
-			</ul>
-		</header>
-		<!--Hero -->
-		<section>
-			<h1>Effective Solutions for Your Business</h1>
-			<button>Order Service</button>
-		</section>
-		<!--Main content -->
-		<main>
-			<!--Advantages -->
-			<section>
-				<h2>Advantages</h2>
-				<ul>
-					<li>
-						<h3>Strategy</h3>
-						<p>
-							Our goal is to identify the business problem to walk away with the
-							perfect and creative solution.
-						</p>
-					</li>
-					<li>
-						<h3>Punctuality</h3>
-						<p>
-							Bring the key message to the brand's audience for the best price
-							within the shortest possible time.
-						</p>
-					</li>
-					<li>
-						<h3>Diligence</h3>
-						<p>
-							Research and confirm brands that present the strongest digital
-							growth opportunities and minimize risk.
-						</p>
-					</li>
-					<li>
-						<h3>Technologies</h3>
-						<p>
-							Design practice focused on digital experiences. We bring forth a
-							deep passion for problem-solving.
-						</p>
-					</li>
-				</ul>
-			</section>
-			<!--What we do -->
-			<section>
-				<h2>What are we doing</h2>
-				<ul>
-					<li>
-						<img src="./images/adv/desktop-1x.jpg" alt="img" />
-					</li>
-					<li>
-						<img src="./images/adv/phone-1x.jpg" alt="img" />
-					</li>
-					<li>
-						<img src="./images/adv/laptop-1x.jpg" alt="img" />
-					</li>
-				</ul>
-			</section>
-			<!--Our team -->
-			<section>
-				<h2>Our Team</h2>
-				<ul>
-					<li>
-						<img src="./images/team/Mark.jpg" alt="photo" />
-						<h3>Mark Guerrero</h3>
-						<span>Product Designer</span>
-					</li>
-					<li>
-						<img src="./images/team/tom.jpg"" alt="photo" />
-						<h3>Tom Ford</h3>
-						<span>Frontend Developer</span>
-					</li>
-					<li>
-						<img src="./images/team/Camila.jpg"" alt="photo" />
-						<h3>Camila Garcia</h3>
-						<span>Marketing</span>
-					</li>
-					<li>
-						<img src="./images/team/Daniel.jpg"" alt="photo" />
-						<h3>Daniel Wilson</h3>
-						<span>UI Designer</span>
-					</li>
-				</ul>
-			</section>
-		</main>
-		<!--Footer -->
-		<footer>
-			<div>
-				<a href=""><span>WEB</span><span>STUDIO</span></a>
-			</div>
-			<p>
-				Increase the flow of customers and sales for your business with digital
-				marketing & growth solutions.
-			</p>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Studio</title>
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <nav>
+        <a href="./index.html"><span>WEB</span>STUDIO</a>
+        <ul>
+          <li>
+            <a href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <!--Main content -->
+
+      <!--Hero -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <!--Advantages -->
+      <section>
+        <h2>Advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--What we do -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our-work/desktop-1x.jpg"
+              alt="desktop"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/our-work/phone-1x.jpg"
+              alt="mobile phone"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/our-work/laptop-1x.jpg"
+              alt="laptop"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <!--Our team -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team/mark.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/tom.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/camila.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/daniel.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--Footer -->
+    <footer>
+      <a href=""><span>WEB</span>STUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
