--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <ul>
           <li>
             <img
-              src="./images/team/mark.jpg"
+              src="./images/our-team/mark.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -122,7 +122,7 @@
           </li>
           <li>
             <img
-              src="./images/team/tom.jpg"
+              src="./images/our-team/tom.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -132,7 +132,7 @@
           </li>
           <li>
             <img
-              src="./images/team/camila.jpg"
+              src="./images/our-team/camila.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -142,7 +142,7 @@
           </li>
           <li>
             <img
-              src="./images/team/daniel.jpg"
+              src="./images/our-team/daniel.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
