--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li>
             <a href="./index.html">Studio</a>
@@ -23,15 +23,16 @@
           </li>
         </ul>
       </nav>
-
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--Main content -->
@@ -155,7 +156,7 @@
     </main>
     <!--Footer -->
     <footer>
-      <a href=""><span>WEB</span>STUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
